--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.scroll-container {
+  height: 100vh;
+  overflow: auto;
+  scroll-snap-type: y mandatory;
+}
+
+.scroll-area {
+  scroll-snap-align: start;
+}
+
+.scaleUpAnchor {
+  scale: 1.3;
+}
+
+.scaleDownAnchor {
+  scale: 1.1;
+}
