made nav container smaller
to enable scrolling while hovering anywhere on the page.

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ html {
   overflow: auto;
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
+  position: relative;
 }
 
 .scroll-area {
